--- a/index.html
+++ b/index.html
@@ -3,241 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- 🚫 Prevent Cache -->
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+
     <title>World Diabetes Day Pledge</title>
 
+    <!-- ✅ Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <!-- ✅ SweetAlert2 -->
+
+    <!-- ✅ Google Font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- ✅ Your Custom CSS -->
+    <link rel="stylesheet" href="style.css?v=3" />
+
+    <!-- ✅ JS Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <!-- ✅ html2canvas for image download -->
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
-
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
-
-      body {
-        font-family: "Poppins", sans-serif;
-        background: #ffffff;
-        margin: 0;
-        min-height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .pledge-card {
-        background: url("Background.jpg") no-repeat center center;
-        background-size: 100% 100%;
-        max-width: 470px;
-        width: 100%;
-        text-align: center;
-        border-radius: 10px;
-        padding: 25px 20px 10px;
-        position: relative;
-        box-shadow: 0 5px 25px rgba(0, 0, 0, 0.1);
-        color: #000;
-      }
-
-      .header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 10px;
-      }
-
-      .header-left {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-      }
-
-      .header-left .blue-circle {
-        width: 28px;
-        height: 28px;
-        border: 3px solid #004aad;
-        border-radius: 50%;
-        margin-bottom: 6px;
-      }
-
-      .header-left h6 {
-        font-size: 15px;
-        font-weight: 600;
-        margin: 0;
-        color: #000;
-      }
-
-      .header-left h6 span {
-        color: #4a90e2;
-      }
-
-      .header-left span {
-        font-size: 12px;
-        color: #004aad;
-      }
-
-      .header-right {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-        text-align: right;
-        font-weight: 700;
-        color: #004aad;
-        font-size: 15px;
-        line-height: 1.2;
-        letter-spacing: 0.3px;
-        padding-right: 8px;
-      }
-
-      .header-right span {
-        display: block;
-      }
-
-      .header-right span:nth-child(2) {
-        align-self: center;
-      }
-
-      .upload-circle {
-        margin: 25px auto 20px;
-        border: 7px solid #4a90e2;
-        width: 200px;
-        height: 200px;
-        border-radius: 50%;
-        background-color: rgba(233, 243, 252, 0.7);
-        position: relative;
-        overflow: hidden;
-        cursor: pointer;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: #000;
-        font-weight: 600;
-        text-align: center;
-        transition: all 0.2s;
-      }
-
-      .upload-circle:hover {
-        box-shadow: 0 0 0 3px rgba(74, 144, 226, 0.3);
-      }
-
-      .upload-circle img {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        top: 0;
-        left: 0;
-      }
-
-      .upload-circle input[type="file"] {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        opacity: 0;
-        cursor: pointer;
-        z-index: 2;
-      }
-
-      .quote-box {
-        position: relative;
-        border: 4px solid #2b72d8;
-        border-radius: 25px;
-        padding: 35px 35px 35px;
-        margin: 40px 0 60px;
-        background: transparent;
-        text-align: left;
-        overflow: visible;
-      }
-
-      .quote-box::before,
-      .quote-box::after {
-        font-family: "Georgia", serif;
-        font-weight: 700;
-        font-size: 60px;
-        color: #2b72d8;
-        line-height: 1;
-        background: #f9fbff;
-        position: absolute;
-        z-index: 2;
-      }
-
-      .quote-box::before {
-        content: "“";
-        top: -22px;
-        left: 12px;
-      }
-
-      .quote-box::after {
-        content: "”";
-        bottom: -32px;
-        right: 14px;
-      }
-
-      .quote-box input,
-      .quote-box select {
-        border: none;
-        background: transparent;
-        width: 100%;
-        font-weight: 600;
-        font-size: 17px;
-        color: #000;
-        margin-bottom: 12px;
-        outline: none;
-      }
-
-      /* ✅ Download button hover animation */
-      .download-btn {
-        position: absolute;
-        left: 50%;
-        bottom: -30px;
-        transform: translateX(-50%);
-        background: #fff;
-        border: 1px solid #000;
-        border-radius: 25px;
-        padding: 8px 40px;
-        font-weight: 600;
-        font-size: 15px;
-        color: #000;
-        cursor: pointer;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-        transition: all 0.3s ease;
-      }
-
-      .download-btn:hover {
-        transform: translateX(-50%) scale(1.08);
-        background: #004aad;
-        color: #fff;
-        box-shadow: 0 6px 15px rgba(0, 0, 0, 0.25);
-      }
-
-      .logo-bar {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        border-top: 2px solid rgba(74, 144, 226, 0.25);
-        margin-top: 25px;
-        width: 100%;
-        background: transparent;
-        overflow: hidden;
-        gap: 20px;
-        padding: 10px 0;
-      }
-
-      .logo-bar img {
-        flex: 1;
-        max-width: calc(25% - 15px);
-        height: auto;
-        object-fit: contain;
-        filter: brightness(1.1) contrast(1.1);
-      }
-
-      .logo-bar img:hover {
-        transform: none;
-        opacity: 1;
-      }
-    </style>
   </head>
 
   <body>
@@ -245,13 +39,11 @@
       <div class="header">
         <div class="header-left">
           <div class="blue-circle"></div>
-          <h6>world <span style="color: #4a90e2">diabetes</span> day</h6>
+          <h6>world <span>diabetes</span> day</h6>
           <span>14 November</span>
         </div>
         <div class="header-right">
-          <span>DIABETES</span>
-          <span>AND</span>
-          <span>WELL BEING</span>
+          <span>DIABETES</span><span>AND</span><span>WELL BEING</span>
         </div>
       </div>
 
@@ -260,14 +52,20 @@
         <span>CLICK<br />Upload Your Photo</span>
       </div>
 
-      <div class="quote-box">
-        <input type="text" id="name" placeholder="Type your Name" />
+      <div class="quote-box" id="quoteBox">
+        <input
+          type="text"
+          id="name"
+          placeholder="Type your Name"
+          autocomplete="off"
+        />
         <input
           type="text"
           id="designation"
           placeholder="Type your Designation"
+          autocomplete="off"
         />
-        <select id="pledge">
+        <select id="pledge" autocomplete="off">
           <option value="">Select Your Pledge</option>
           <option>Stay Active Daily</option>
           <option>Eat Healthy Meals</option>
@@ -278,77 +76,13 @@
       </div>
 
       <div class="logo-bar">
-        <img src="img/Empozin-03.png" alt="Empozin3XR" />
-        <img src="img/ADN-04.png" alt="ADN6" />
-        <img src="img/Segultide.png" alt="Seglutide" />
-        <img src="img/Macter.png" alt="Macter" />
+        <img src="img/Empozin-03.png" alt="Empozin" width="100" height="90" />
+        <img src="img/ADN-04.png" alt="ADN" width="100" height="90" />
+        <img src="img/Segultide.png" alt="Segultide" width="100" height="90" />
+        <img src="img/Macter.png" alt="Macter" width="85" height="65" />
       </div>
     </div>
 
-    <script>
-      const photoArea = document.getElementById("photoArea");
-      const uploadInput = document.getElementById("uploadPhoto");
-      const downloadBtn = document.getElementById("downloadBtn");
-      const card = document.getElementById("pledgeCard");
-
-      function setupUploadListener(inputElement) {
-        inputElement.addEventListener("change", (e) => {
-          const file = e.target.files[0];
-          if (file) {
-            const reader = new FileReader();
-            reader.onload = (ev) => {
-              photoArea.innerHTML = `
-                <img src="${ev.target.result}" alt="photo">
-                <input type="file" id="uploadPhoto" accept="image/*" 
-                style="opacity:0;position:absolute;width:100%;height:100%;top:0;left:0;cursor:pointer;">
-              `;
-              const newInput = photoArea.querySelector("#uploadPhoto");
-              setupUploadListener(newInput);
-            };
-            reader.readAsDataURL(file);
-          }
-        });
-      }
-      setupUploadListener(uploadInput);
-
-      // ✅ SweetAlert + html2canvas download
-      downloadBtn.addEventListener("click", async () => {
-        const name = document.getElementById("name").value.trim();
-        const designation = document.getElementById("designation").value.trim();
-        const pledge = document.getElementById("pledge").value;
-        if (!name || !designation || !pledge) {
-          Swal.fire({
-            icon: "warning",
-            title: "Incomplete Details",
-            text: "Please fill all fields before downloading.",
-          });
-          return;
-        }
-
-        // Sweet Alert confirmation
-        Swal.fire({
-          icon: "success",
-          title: "Pledge Submitted!",
-          text: "Your pledge has been recorded successfully.",
-          showConfirmButton: false,
-          timer: 1500,
-        });
-
-        // wait a bit for alert animation
-        setTimeout(() => {
-          html2canvas(card, {
-            scale: 2,
-            useCORS: true,
-            backgroundColor: "#ffffff",
-            logging: false,
-          }).then((canvas) => {
-            const link = document.createElement("a");
-            link.download = "World_Diabetes_Day_Pledge.jpeg";
-            link.href = canvas.toDataURL("image/jpeg", 1.0);
-            link.click();
-          });
-        }, 1600);
-      });
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
