--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <div class="upload-circle" id="photoArea">
         <input type="file" id="uploadPhoto" accept="image/*" />
-        <span>CLICK<br />Upload Your Photos</span>
+        <span>CLICK<br />Upload Your Photo</span>
       </div>
 
       <div class="quote-box" id="quoteBox">
