--- a/index.html
+++ b/index.html
@@ -70,11 +70,14 @@
         />
         <select id="pledge" autocomplete="off">
           <option value="">Select Your Pledge</option>
-          <option>Stay Active Daily</option>
-          <option>Eat Healthy Meals</option>
-          <option>Monitor Blood Sugar</option>
-          <option>Spread Awareness</option>
+          <option>I pledge to exercise 30 minutes a day</option>
+          <option>I pledge to eat a balanced and healthy diet</option>
+          <option>I pledge to reduce fat and sugar use</option>
+          <option>I pledge to avoid smoking tobacco</option>
+          <option>I pledge to keep myself calm and avoid stress</option>
+          <option>I pledge to maintain a healthy weight</option>
         </select>
+
         <button class="download-btn" id="downloadBtn">Download</button>
       </div>
 
