--- a/index.html
+++ b/index.html
@@ -6,89 +6,141 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-
-    <!-- 🚫 Prevent Cache -->
     <meta
       http-equiv="Cache-Control"
       content="no-cache, no-store, must-revalidate"
     />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-
     <title>World Diabetes Day Pledge</title>
 
-    <!-- ✅ Bootstrap -->
+    <!-- ✅ Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
 
-    <!-- ✅ Google Font -->
+    <!-- ✅ Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
 
-    <!-- ✅ Your Custom CSS -->
+    <!-- ✅ Custom CSS -->
     <link rel="stylesheet" href="style.css?v=3" />
 
-    <!-- ✅ JS Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+    <!-- ✅ Cropper.js CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css"
+    />
   </head>
 
   <body>
-    <div class="pledge-card" id="pledgeCard">
-      <div class="header">
-        <div class="header-left">
-          <div class="blue-circle"></div>
-          <h6>world <span>diabetes</span> day</h6>
-          <span>14 November</span>
+    <form action="upload.php" method="POST" enctype="multipart/form-data">
+      <div class="pledge-card" id="pledgeCard">
+        <div class="header">
+          <div class="header-left">
+            <div class="blue-circle"></div>
+            <h6>world <span>diabetes</span> day</h6>
+            <span>14 November</span>
+          </div>
+          <div class="header-right">
+            <span>DIABETES</span><span>AND</span><span>WELL BEING</span>
+          </div>
         </div>
-        <div class="header-right">
-          <span>DIABETES</span><span>AND</span><span>WELL BEING</span>
+
+        <div class="upload-circle" id="photoArea">
+          <input
+            type="file"
+            id="uploadPhoto"
+            name="photo"
+            accept="image/*"
+            required
+          />
+          <span>CLICK<br />Upload Your Photo</span>
+        </div>
+
+        <div class="quote-box" id="quoteBox">
+          <input
+            type="text"
+            id="name"
+            name="name"
+            placeholder="Type your Name"
+            autocomplete="off"
+            required
+          />
+          <input
+            type="text"
+            id="designation"
+            name="designation"
+            placeholder="Type your Designation"
+            autocomplete="off"
+            required
+          />
+          <select id="pledge" name="pledge" autocomplete="off" required>
+            <option value="">Select Your Pledge</option>
+            <option>I pledge to exercise 30 minutes a day</option>
+            <option>I pledge to eat a balanced and healthy diet</option>
+            <option>I pledge to reduce fat and sugar use</option>
+            <option>I pledge to avoid smoking tobacco</option>
+            <option>I pledge to keep myself calm and avoid stress</option>
+            <option>I pledge to maintain a healthy weight</option>
+          </select>
+
+          <!-- Hidden field to hold cropped image (Base64) -->
+          <input type="hidden" id="croppedPhoto" name="croppedPhoto" />
+
+          <button id="downloadBtn" class="download-btn" type="button">
+            Download
+          </button>
+        </div>
+
+        <div class="logo-bar">
+          <img src="img/Empozin-03.png" alt="Empozin" width="100" height="90" />
+          <img src="img/ADN-04.png" alt="ADN" width="100" height="90" />
+          <img
+            src="img/Segultide.png"
+            alt="Segultide"
+            width="100"
+            height="90"
+          />
+          <img src="img/Macter.png" alt="Macter" width="85" height="65" />
         </div>
       </div>
+    </form>
 
-      <div class="upload-circle" id="photoArea">
-        <input type="file" id="uploadPhoto" accept="image/*" />
-        <span>CLICK<br />Upload Your Photo</span>
-      </div>
-
-      <div class="quote-box" id="quoteBox">
-        <input
-          type="text"
-          id="name"
-          placeholder="Type your Name"
-          autocomplete="off"
-        />
-        <input
-          type="text"
-          id="designation"
-          placeholder="Type your Designation"
-          autocomplete="off"
-        />
-        <select id="pledge" autocomplete="off">
-          <option value="">Select Your Pledge</option>
-          <option>I pledge to exercise 30 minutes a day</option>
-          <option>I pledge to eat a balanced and healthy diet</option>
-          <option>I pledge to reduce fat and sugar use</option>
-          <option>I pledge to avoid smoking tobacco</option>
-          <option>I pledge to keep myself calm and avoid stress</option>
-          <option>I pledge to maintain a healthy weight</option>
-        </select>
-
-        <button class="download-btn" id="downloadBtn">Download</button>
-      </div>
-
-      <div class="logo-bar">
-        <img src="img/Empozin-03.png" alt="Empozin" width="100" height="90" />
-        <img src="img/ADN-04.png" alt="ADN" width="100" height="90" />
-        <img src="img/Segultide.png" alt="Segultide" width="100" height="90" />
-        <img src="img/Macter.png" alt="Macter" width="85" height="65" />
+    <!-- ✅ Crop Modal (hidden by default) -->
+    <div class="modal fade" id="cropModal" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h6 class="modal-title">Adjust your photo</h6>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+            ></button>
+          </div>
+          <div class="modal-body text-center">
+            <img id="cropImage" style="max-width: 100%" />
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" id="cropBtn">
+              Save
+            </button>
+          </div>
+        </div>
       </div>
     </div>
 
+    <!-- ✅ JS Libraries (NO DUPLICATES) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
+
+    <!-- ✅ Your custom JS -->
     <script src="script.js"></script>
   </body>
 </html>
